fixing tablet fields alignment

--- a/CSS/Marketo.css
+++ b/CSS/Marketo.css
@@ -378,7 +378,7 @@ footer>iframe{
         width: 100% !important;
         height: 70px !important;
         font-size: 30px !important;
-        padding-left: 15px !important;
+        padding-left: 25px !important;
     }
     .form-container #FirstName,.form-container #LastName{
         width: 100%!important;
